# dravr-riviere

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  SECURITY.md
.claude/: settings.json
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml  homebrew.yml  release.yml
crates/dravr-riviere-mcp/: Cargo.toml
crates/dravr-riviere-mcp/src/: lib.rs  main.rs  state.rs
crates/dravr-riviere-mcp/src/tools/: mod.rs
crates/dravr-riviere-server/: Cargo.toml
crates/dravr-riviere-server/src/: auth.rs  health.rs  lib.rs  main.rs  router.rs
scripts/: pre-push-validate.sh
src/: aggregation.rs  archive.rs  error.rs  key.rs  lib.rs  point.rs  query.rs  series.rs  series_type.rs  store.rs
tests/: aggregation_test.rs  data_point_test.rs  error_test.rs  query_test.rs  series_type_test.rs  store_concurrent_test.rs  store_test.rs  time_series_test.rs
