# ABOUTME: Time-series storage engine for health and fitness metric persistence
# ABOUTME: Postgres-backed metric storage with windowed aggregation and range queries
#
# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2026 dravr.ai

[workspace]
members = [".", "crates/dravr-riviere-mcp", "crates/dravr-riviere-server"]

[package]
name = "dravr-riviere"
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
description = "Time-series storage engine — Postgres-backed metric persistence, windowed aggregation, and range queries"
repository = "https://github.com/dravr-ai/dravr-riviere"
homepage = "https://github.com/dravr-ai/dravr-riviere"
readme = "README.md"
keywords = ["timeseries", "metrics", "storage", "fitness", "health"]
categories = ["database", "science"]

# ============================================================================
# Build Profiles
# ============================================================================

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# ============================================================================
# Workspace Lint Configuration
# ============================================================================
# Shared across all workspace crates via [lints] workspace = true.
# Individual crates inherit these settings automatically.
#
# ZERO TOLERANCE ENFORCEMENT:
#   cargo clippy (reads this config, applies level = "deny")

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
# Base configuration: Enable clippy lint groups at DENY level
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# Type conversion casts - allowed when properly validated
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

# Const fn suggestions - clippy suggests const for methods that can't be const
missing_const_for_fn = "allow"

# Significant drop tightening - false positives with async lock guards
significant_drop_tightening = "allow"

# Module naming - allow repetition for clarity
module_name_repetitions = "allow"

# Multiple dependency versions - unavoidable in some transitive deps
multiple_crate_versions = "allow"

# Missing errors doc - not all error returns need doc comments
missing_errors_doc = "allow"

# must_use candidate - too noisy for builders and constructors
must_use_candidate = "allow"

# return_self_not_must_use - builder pattern methods
return_self_not_must_use = "allow"

# redundant_pub_crate - explicit visibility is clearer
redundant_pub_crate = "allow"

# unnecessary_literal_bound - false positives with async trait lifetimes
unnecessary_literal_bound = "allow"

[lib]
name = "dravr_riviere"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = "1"

[lints]
workspace = true
