# ABOUTME: MCP server crate exposing time-series storage via Model Context Protocol
# ABOUTME: Supports stdio and HTTP transports with query, aggregate, and insert tools
#
# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2026 dravr.ai

[package]
name = "dravr-riviere-mcp"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "MCP server for dravr-riviere time-series engine — expose storage via Model Context Protocol"
repository = "https://github.com/dravr-ai/dravr-riviere"
readme = "README.md"
keywords = ["mcp", "timeseries", "metrics", "json-rpc", "storage"]
categories = ["database", "development-tools"]
publish = false

[lib]
name = "dravr_riviere_mcp"
path = "src/lib.rs"

[[bin]]
name = "dravr-riviere-mcp"
path = "src/main.rs"

[dependencies]
dravr-riviere = { path = "../..", version = "0.2.0" }
dravr-tronc = "0.1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[lints]
workspace = true
