# ABOUTME: REST API + MCP server exposing time-series storage
# ABOUTME: Unified HTTP server with query, aggregate, and insert endpoints
#
# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2026 dravr.ai

[package]
name = "dravr-riviere-server"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Unified REST API + MCP server for dravr-riviere time-series engine"
repository = "https://github.com/dravr-ai/dravr-riviere"
readme = "README.md"
keywords = ["timeseries", "rest", "mcp", "metrics", "server"]
categories = ["database", "web-programming::http-server"]
publish = false

[lib]
name = "dravr_riviere_server"
path = "src/lib.rs"

[[bin]]
name = "dravr-riviere-server"
path = "src/main.rs"

[dependencies]
dravr-riviere = { path = "../..", version = "0.0.0" }
dravr-riviere-mcp = { path = "../dravr-riviere-mcp", version = "0.0.0" }
dravr-tronc = "0.1.0"
async-trait = "0.1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
